--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,10 @@ requests==2.28.1  # Library for making HTTP requests
 # Environment variable management
 python-dotenv==0.21.0  # Reads key-value pairs from a .env file
 
-# Data serialization (optional)
+# Data serialization
 marshmallow==3.19.1  # Object serialization/deserialization library
 
-# Testing libraries (optional)
+# Testing libraries
 pytest==7.2.0  # Testing framework
 pytest-flask==1.2.0  # Pytest support for Flask applications
 
