--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Integration Tests
         run: |
           docker build -t database ./db
-          docker run --name employees -dp 33060:3306 database
+          docker run --name City -dp 33060:3306 db
           mvn -Dtest=com.napier.sem.AppIntegrationTest test
 
 
